# cpp-interface-techniques

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql.yml  linux.yml  macos.yml  pages.yml  windows.yml
benchmarks/: .clang-tidy  CMakeLists.txt  benchmark.cpp
cmake/: CompilerWarnings.cmake  FetchDeps.cmake
docs/: notes.md
src/: CMakeLists.txt
src/crtp/adapters/: CMakeLists.txt
src/crtp/adapters/exceptions_map/: CMakeLists.txt  lane_adapter.hpp  map_adapter.hpp  road_adapter.hpp
src/crtp/adapters/optional_map/: CMakeLists.txt  lane_adapter.hpp  map_adapter.hpp  road_adapter.hpp
src/crtp/interfaces/: CMakeLists.txt  i_lane.hpp  i_map.hpp  i_road.hpp
src/inheritance/: CMakeLists.txt
src/inheritance/adapters/: CMakeLists.txt
src/inheritance/adapters/exceptions_map/: CMakeLists.txt  lane_adapter.hpp  map_adapter.hpp  road_adapter.hpp
src/inheritance/adapters/optional_map/: CMakeLists.txt  lane_adapter.hpp  map_adapter.hpp  road_adapter.hpp
src/inheritance/interfaces/: CMakeLists.txt  i_lane.hpp  i_map.hpp  i_road.hpp
tests/: .clang-tidy  CMakeLists.txt
tests/crtp/: CMakeLists.txt  crtp_exceptions_map.cpp  crtp_exceptions_map_test.cpp  crtp_map_test.cpp  crtp_optional_map.cpp  crtp_optional_map_test.cpp  crtp_test.cpp
tests/exceptions_map/: CMakeLists.txt  exceptions_map_test.cpp
tests/inheritance/: CMakeLists.txt  inheritance_exceptions_map_test.cpp  inheritance_map_test.cpp  inheritance_optional_map_test.cpp  inheritance_test.cpp
tests/optional_map/: CMakeLists.txt  optional_map_test.cpp
